...
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.venuefinder.VenueFinderFragment">

    <EditText
            android:id="@+id/venueSearchField"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/venue_search_hint"
            android:layout_weight="1"
            android:maxLines="1"
            android:imeOptions="actionSearch"
...
            app:layout_constraintEnd_toEndOf="parent"
            tools:max="100"
            tools:progress="60"
            tools:visibility="visible"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/venueResultList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/venueSearchField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
...
