...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            tools:context=".view.venuedetail.VenueDetailFragment">

        <TextView
                android:id="@+id/venueDetailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/venue_detail_title_unknown"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/VenueFinder.Title"
...
